@@ -33,6 +33,7 @@ sunuo (0.3.0) unstable; urgency=low
   * added property Mobile.LastCombatTime
   * added interface IGold
   * login: use proprietary timestamp format for now
+  * login: initialize column MagicWord
   * debian: symlink base/Data to /etc/sunuo
   * debian: symlink base/var/log to /var/log/sunuo
   * debian: install SunUO.exe.config in /etc/sunuo/
